--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,8 @@ jdk:
 
 env: JAVA_HOME=/usr/lib/jvm/java-8-oracle
 
+install:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
 script:
   - mvn test
