--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: java
 
 jdk:
   - oraclejdk8
-
-env: JAVA_HOME=/usr/lib/jvm/java-8-oracle
+  - oraclejdk11
+  - openjdk10
+  - openjdk11
 
 install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
