--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 script:
-  - mvn test
+  - mvn -Ptest test
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
